--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,6 +7,7 @@
 }
 
 .realtor-info {
+  margin-top: 12%;
   font-size: 50px;
   font-weight: 1000px;
   text-align: center;
